@@ -373,7 +373,9 @@ class DaemonContext(object):
             return
 
         if self.pidfile is not None:
-            self.pidfile.__exit__()
+            # Emulate the described behaviour for when a ‘with’ block ends,
+            # <URL:http://docs.python.org/reference/datamodel.html#context-managers>.
+            self.pidfile.__exit__(None, None, None)
 
         self._is_open = False
 
