@@ -1,3 +1,9 @@
+2010-02-26  Ben Finney  <ben+python@benfinney.id.au>
+
+    * daemon/daemon.py: Invoke the pidfile context manager's ‘__exit__’
+      method with the correct arguments (as per
+      <URL:http://docs.python.org/reference/datamodel.html#context-managers>).
+
 2010-01-20  Ben Finney  <ben+python@benfinney.id.au>
 
     * Add ‘pylint’ configuration for this project.
